Test sample changes.

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue24516.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue24516.xaml
@@ -8,7 +8,7 @@
                VerticalOptions="Center" 
                HorizontalOptions="Center">
     <Label x:Name="HelloWorldLabel"
-           AutomationId="label"
+           AutomationId="HelloWorldLabel"
            Text="Hello, World!" />
     <Button AutomationId="ChangeTextType"
             Text="Change Text Type"
