--- a/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
+++ b/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
@@ -4,4 +4,27 @@
     x:Class="Maui.Controls.Sample.MainPage"
     xmlns:local="clr-namespace:Maui.Controls.Sample">
 
+    <ScrollView>
+        <VerticalStackLayout
+            Padding="30,0"
+            Spacing="25">
+            <Image
+                Source="dotnet_bot.png"
+                HeightRequest="185"
+                Aspect="AspectFit"
+                SemanticProperties.Description="dot net bot in a race car number eight" />
+
+            <Image
+                Source="broken.avif"
+                Aspect="AspectFit" />
+            <Image
+                Source="brokentojpg.jpeg"
+                Aspect="AspectFit" />
+            <Image
+                Source="working.avif"
+                Aspect="AspectFit" />
+            
+        </VerticalStackLayout>
+    </ScrollView>
+
 </ContentPage>
