--- a/src/Controls/tests/Xaml.UnitTests/Issues/Maui25406.xaml
+++ b/src/Controls/tests/Xaml.UnitTests/Issues/Maui25406.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Microsoft.Maui.Controls.Xaml.UnitTests"
-    x:Class="Microsoft.Maui.Controls.Xaml.UnitTests.Maui25XXX"
-    x:DataType="local:Maui25XXXViewModel">
+    x:Class="Microsoft.Maui.Controls.Xaml.UnitTests.Maui25406"
+    x:DataType="local:Maui25406ViewModel">
 
     <Label Text="{Binding Text}" />
 </ContentPage>
