--- a/src/Controls/samples/Controls.Sample/Pages/Controls/TitleBarPage.xaml
+++ b/src/Controls/samples/Controls.Sample/Pages/Controls/TitleBarPage.xaml
@@ -2,10 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Pages.TitleBarPage"
+             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+             ios:Page.UseSafeArea="False"
              Title="TitleBarPage">
-    <Grid
+    <Grid IgnoreSafeArea="True"
+          RowDefinitions="Auto,*"
         ColumnDefinitions="*,*">
-        <VerticalStackLayout
+        <VerticalStackLayout IgnoreSafeArea="True"
             Spacing="16"
             Margin="16"
             Grid.Column="0">
@@ -86,7 +89,7 @@
             </HorizontalStackLayout>
         </VerticalStackLayout>
   
-        <VerticalStackLayout
+        <VerticalStackLayout IgnoreSafeArea="True"
             Spacing="16"
             Margin="16"
             Grid.Column="1">
