move things around and use WeakReference for _iTitleBar

--- a/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
+++ b/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
@@ -5,6 +5,7 @@
     Background="lightblue"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     ios:Page.UseSafeArea="False"
+    NavigationPage.HasNavigationBar="False"
     xmlns:local="clr-namespace:Maui.Controls.Sample">
 
 	<Grid   IgnoreSafeArea="True"
