--- a/src/Templates/src/templates/maui-mobile/Pages/Controls/TagView.xaml
+++ b/src/Templates/src/templates/maui-mobile/Pages/Controls/TagView.xaml
@@ -2,11 +2,13 @@
 <Border xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
         x:Class="MauiApp._1.Pages.Controls.TagView"
+        xmlns:models="clr-namespace:MauiApp._1.Models"
         StrokeShape="RoundRectangle 16" 
         HeightRequest="32" 
         StrokeThickness="0" 
         Background="{Binding DisplayColor}"
-        Padding="{OnPlatform '12,0,12,8',Android='12,0,12,0'}">
+        Padding="{OnPlatform '12,0,12,8',Android='12,0,12,0'}"
+        x:DataType="models:Tag">
         
         <Label Text="{Binding Title}" x:Name="TitleLabel"
             TextColor="{AppThemeBinding Light={StaticResource LightBackground},Dark={StaticResource DarkBackground}}" 
