Fix toggle including sample content in template

--- a/src/Templates/src/templates/maui-mobile/App.xaml
+++ b/src/Templates/src/templates/maui-mobile/App.xaml
@@ -8,7 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
                 <ResourceDictionary Source="Resources/Styles/AppStyles.xaml" />
 <!--#endif -->
             </ResourceDictionary.MergedDictionaries>
