--- a/src/Templates/src/templates/maui-mobile/AppShell.xaml
+++ b/src/Templates/src/templates/maui-mobile/AppShell.xaml
@@ -3,23 +3,23 @@
     x:Class="MauiApp._1.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
     xmlns:sf="clr-namespace:Syncfusion.Maui.Toolkit.SegmentedControl;assembly=Syncfusion.Maui.Toolkit"
     xmlns:pages="clr-namespace:MauiApp._1.Pages"
 <!--#endif -->
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
     xmlns:local="clr-namespace:MauiApp._1"
 <!--#endif -->
     Shell.FlyoutBehavior="Flyout"
     Title="MauiApp._1">
 
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
     <ShellContent
         Title="Dashboard"
         Icon="{StaticResource IconDashboard}"
