--- a/src/Templates/src/templates/maui-mobile/Resources/Styles/Styles.xaml
+++ b/src/Templates/src/templates/maui-mobile/Resources/Styles/Styles.xaml
@@ -2,11 +2,11 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:shimmer="clr-namespace:Syncfusion.Maui.Toolkit.Shimmer;assembly=Syncfusion.Maui.Toolkit">
 <!--#endif -->
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 <!--#endif -->
 
@@ -30,19 +30,19 @@
     </Style>
 
     <Style TargetType="Button">
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource PrimaryDarkText}}" />
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Primary}}" />
 <!--#endif -->
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="FontSize" Value="14"/>
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="FontSize" Value="18"/>
 <!--#endif -->
         <Setter Property="BorderWidth" Value="0"/>
@@ -128,18 +128,18 @@
     </Style>
 
     <Style TargetType="Entry">
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource DarkOnLightBackground}, Dark={StaticResource LightOnDarkBackground}}" />
 <!--#endif -->
         <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="FontSize" Value="14" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="FontSize" Value="{OnIdiom 18, Desktop=24}" />
 <!--#endif -->
         <Setter Property="PlaceholderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
@@ -235,10 +235,10 @@
         <Setter Property="TitleColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="FontSize" Value="14" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="FontSize" Value="{OnIdiom 18, Desktop=24}" />
 <!--#endif -->
         <Setter Property="MinimumHeightRequest" Value="44"/>
@@ -451,19 +451,19 @@
 
     <Style TargetType="Page" ApplyToDerivedTypes="True">
         <Setter Property="Padding" Value="0"/>
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
 <!--#endif -->
     </Style>
 
     <Style TargetType="Shell" ApplyToDerivedTypes="True">
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
 <!--#endif -->
         <Setter Property="Shell.ForegroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource SecondaryDarkText}}" />
@@ -471,12 +471,12 @@
         <Setter Property="Shell.DisabledColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
         <Setter Property="Shell.UnselectedColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray200}}" />
         <Setter Property="Shell.NavBarHasShadow" Value="False" />
-<!--#if (!SampleContent) -->
+<!--#if (!IncludeSampleContent) -->
         <Setter Property="Shell.TabBarBackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
         <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
         <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
 <!--#endif -->
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
         <Setter Property="Shell.TabBarBackgroundColor" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
         <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource DarkOnLightBackground}, Dark={StaticResource LightOnDarkBackground}}" />
         <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource DarkOnLightBackground}, Dark={StaticResource LightOnDarkBackground}}" />
@@ -497,7 +497,7 @@
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
-<!--#if (SampleContent) -->
+<!--#if (IncludeSampleContent) -->
     <Style TargetType="shimmer:SfShimmer">
         <Setter Property="Fill" Value="{AppThemeBinding Light={StaticResource LightSecondaryBackground}, Dark={StaticResource DarkSecondaryBackground}}" />
         <Setter Property="WaveColor" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
