--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue25473.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue25473.xaml
@@ -4,26 +4,38 @@
 				 xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
 				 x:Class="Maui.Controls.Sample.Issues.Issue25473">
 
-  <VerticalStackLayout>
-    <!--The Entry control allows text input with ClearButtonVisibility initially set to 'Never' and a specified MinimumWidthRequest.-->
-    <HorizontalStackLayout HorizontalOptions="Center">
-      <Entry
-        x:Name="MainEntryField"
-        AutomationId="EntryField"
-        Grid.Column="1"
-        BackgroundColor="Transparent"
-        ClearButtonVisibility="Never"
-        FontSize="16"
-        ReturnType="Search"
-        IsSpellCheckEnabled="false"
-        IsTextPredictionEnabled="false"
-        Placeholder="Enter text"
-        HorizontalOptions="Fill"
-        VerticalOptions="Center"
-        MinimumWidthRequest="300"
-        VerticalTextAlignment="Center"/>
-    </HorizontalStackLayout>
-  </VerticalStackLayout>
-
-
+      <VerticalStackLayout Spacing="20" HorizontalOptions="Center">
+        <!-- Entry control with ClearButtonVisibility set to 'WhileEditing' -->
+        <HorizontalStackLayout>
+          <Entry
+                x:Name="PrimaryEntryField"
+                AutomationId="PrimaryEntryField"
+                BackgroundColor="Transparent"
+                ClearButtonVisibility="WhileEditing"
+                FontSize="16"
+                ReturnType="Search"
+                IsSpellCheckEnabled="false"
+                IsTextPredictionEnabled="false"
+                HorizontalOptions="Fill"
+                VerticalOptions="Center"
+                MinimumWidthRequest="300"
+                VerticalTextAlignment="Center"/>
+        </HorizontalStackLayout>
+        <!-- Entry control with ClearButtonVisibility set to 'Never' -->
+        <HorizontalStackLayout>
+          <Entry
+              x:Name="SecondaryEntryField"
+              AutomationId="SecondaryEntryField"
+              BackgroundColor="Transparent"
+              ClearButtonVisibility="Never"
+              FontSize="16"
+              ReturnType="Search"
+              IsSpellCheckEnabled="false"
+              IsTextPredictionEnabled="false"
+              HorizontalOptions="Fill"
+              VerticalOptions="Center"
+              MinimumWidthRequest="300"
+              VerticalTextAlignment="Center"/>
+        </HorizontalStackLayout>
+      </VerticalStackLayout>
 </ContentPage>
