--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue25551.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue25551.xaml
@@ -4,49 +4,97 @@
              x:Class="Maui.Controls.Sample.Issues.Issue25551"
              xmlns:local="clr-namespace:Maui.Controls.Sample.Issues">
 
-  <CollectionView AutomationId="ListCollection"
-  Margin="15,0,0,15"
-  SelectionMode="Single"   
-  HeightRequest="300"
-  ItemsSource="{Binding Items}"
-  SelectedItem="{Binding SelectedItem}"
-  VerticalOptions="Center">
-  <CollectionView.ItemsLayout>
-  <LinearItemsLayout Orientation="Horizontal" ItemSpacing="10"/>
-  </CollectionView.ItemsLayout>
+  <VerticalStackLayout>
+    <CollectionView AutomationId="SingleSelection"
+    Margin="15,0,0,15"
+    SelectionMode="Single"   
+    HeightRequest="300"
+    ItemsSource="{Binding Items}"
+    SelectedItem="{Binding SelectedItem}"
+    VerticalOptions="Center">
+      <CollectionView.ItemsLayout>
+        <LinearItemsLayout Orientation="Horizontal" ItemSpacing="10"/>
+      </CollectionView.ItemsLayout>
       <CollectionView.ItemTemplate>
-      <DataTemplate>
-        <Grid RowDefinitions="Auto,4" RowSpacing="5">
-        <VisualStateManager.VisualStateGroups>
-        <VisualStateGroup x:Name="CommonStates">
-        <VisualState x:Name="Normal">
-        <VisualState.Setters>
-        <Setter Property="BackgroundColor" Value="Transparent"/>
-        <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="False"/>
-        </VisualState.Setters>
-        </VisualState>
-        <VisualState x:Name="Selected">
-        <VisualState.Setters>
-        <Setter Property="BackgroundColor" Value="Transparent"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="True"/>
-        </VisualState.Setters>
-        </VisualState>
-        </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+        <DataTemplate>
+          <Grid RowDefinitions="Auto,4" RowSpacing="5">
+            <VisualStateManager.VisualStateGroups>
+              <VisualStateGroup x:Name="CommonStates">
+                <VisualState x:Name="Normal">
+                  <VisualState.Setters>
+                    <Setter Property="BackgroundColor" Value="Transparent"/>
+                    <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="False"/>
+                  </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Selected">
+                  <VisualState.Setters>
+                    <Setter Property="BackgroundColor" Value="Transparent"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="True"/>
+                  </VisualState.Setters>
+                </VisualState>
+              </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
 
             <Label 
-            Text="{Binding .}" 
-            x:Name="ItemName"
-            FontAttributes="Bold"
-            FontSize="14"
-            VerticalOptions="Center"
-            HorizontalOptions="Center"
-            TextColor="Green"/>
+              Text="{Binding .}" 
+              x:Name="ItemName"
+              FontAttributes="Bold"
+              FontSize="14"
+              VerticalOptions="Center"
+              HorizontalOptions="Center"
+              TextColor="Green"/>
             <BoxView x:Name="SelectedIndicator" Color="blue" HeightRequest="4" HorizontalOptions="Fill" Grid.Row="1"/>
-     </Grid>
-      </DataTemplate>
+          </Grid>
+        </DataTemplate>
       </CollectionView.ItemTemplate>
 
-     </CollectionView>
+    </CollectionView>
+
+    <CollectionView AutomationId="MultipleSelection"
+    Margin="15,0,0,15"
+    SelectionMode="Multiple"   
+    HeightRequest="300"
+    ItemsSource="{Binding Items}"
+    SelectedItems="{Binding SelectedItems}"
+    VerticalOptions="Center">
+      <CollectionView.ItemsLayout>
+        <LinearItemsLayout Orientation="Horizontal" ItemSpacing="10"/>
+      </CollectionView.ItemsLayout>
+      <CollectionView.ItemTemplate>
+        <DataTemplate>
+          <Grid RowDefinitions="Auto,4" RowSpacing="5">
+            <VisualStateManager.VisualStateGroups>
+              <VisualStateGroup x:Name="CommonStates">
+                <VisualState x:Name="Normal">
+                  <VisualState.Setters>
+                    <Setter Property="BackgroundColor" Value="Transparent"/>
+                    <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="False"/>
+                  </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Selected">
+                  <VisualState.Setters>
+                    <Setter Property="BackgroundColor" Value="Transparent"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter TargetName="SelectedIndicator" Property="BoxView.IsVisible" Value="True"/>
+                  </VisualState.Setters>
+                </VisualState>
+              </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+
+            <Label 
+              Text="{Binding .}" 
+              x:Name="ItemName"
+              FontAttributes="Bold"
+              FontSize="14"
+              VerticalOptions="Center"
+              HorizontalOptions="Center"
+              TextColor="Green"/>
+            <BoxView x:Name="SelectedIndicator" Color="blue" HeightRequest="4" HorizontalOptions="Fill" Grid.Row="1"/>
+          </Grid>
+        </DataTemplate>
+      </CollectionView.ItemTemplate>
+
+    </CollectionView>
+  </VerticalStackLayout>
 </ContentPage>
