--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue25433.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue25433.xaml
@@ -15,9 +15,8 @@
 			</CollectionView.ItemsLayout>
 			<CollectionView.ItemTemplate>
 				<DataTemplate>
-					<Button Width="32"
-							Background="Blue"
-							Text="."/>
+					<Label BackgroundColor="Blue"
+						   Text="Item"/>
 				</DataTemplate>
 			</CollectionView.ItemTemplate>
 		</CollectionView>
